@startuml
class Square {
+ <<Create>> Square(double)
+ <<Create>> Square(String,boolean,double,double,double)
+ double getSide()
+ void setSide(double)
+ void setWidth(double)
+ void setLenght(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}
class Main {
+ {static} void main(String[])
}
class Circle {
- double radius
+ <<Create>> Circle()
+ <<Create>> Circle(double)
+ <<Create>> Circle(String,boolean,double)
+ double getRadius()
+ void setRadius(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}
class Rectangle {
+ double width
+ double lenght
+ <<Create>> Rectangle()
+ <<Create>> Rectangle(double,double)
+ <<Create>> Rectangle(String,boolean,double,double)
+ double getWidth()
+ void setWidth(double)
+ double getLenght()
+ void setLenght(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}
abstract class Shape {
- String color
- boolean filled
+ <<Create>> Shape(String,boolean)
+ <<Create>> Shape()
+ void setFilled(boolean)
+ void setColor(String)
+ String getColor()
+ boolean isFilled()
+ {abstract}double getArea()
+ {abstract}double getPerimeter()
+ String toString()
}


Rectangle <|-- Square
Shape <|-- Circle
Shape <|-- Rectangle
@enduml